--- a/src/components/Profile/MyPosts/Post/Post.module.sass
+++ b/src/components/Profile/MyPosts/Post/Post.module.sass
@@ -2,8 +2,16 @@
     color: #645d15
     font-weight: bold
     padding: 10px
-    span
-        color: blue
-    img
+    display: flex
+    margin-bottom: 20px
+    .itemImg
         width: 50px
         border-radius: 50%
+    .likeImg
+        width: 25px
+        margin-top: 10px
+        margin-bottom: -5px
+    span
+        margin-left: 10px
+    .leftBlock
+        margin-right: 20px
