--- a/src/components/Users/users.module.sass
+++ b/src/components/Users/users.module.sass
@@ -1,6 +1,26 @@
 .Users
-  padding: 10px
-  .photo
-    width: 80px
-    border-radius: 50%
-    margin: 10px
+  .UsersBox
+    display: flex
+    flex-wrap: wrap
+    justify-content: center
+  .userItem
+    width: 250px
+    margin: 20px 10px
+    padding: 10px
+    text-align: center
+    box-shadow: 1px 1px 2px 1px silver
+    background: whitesmoke
+    overflow: hidden
+    .buttonBox
+      margin: 10px 0
+      button
+        background: #645d15
+        color: white
+        padding: 7px 8px
+        border: none
+        cursor: pointer
+        border-radius: 2px
+    .photo
+      width: 80px
+      border-radius: 50%
+      margin: 10px
