--- a/src/components/common/FormsControls/FormsControls.module.sass
+++ b/src/components/common/FormsControls/FormsControls.module.sass
@@ -1,6 +1,7 @@
 
 .formControl.error input, .formControl.error textarea
   border: 2px solid darkred
+  margin-bottom: 10px
 
 .formControl.error span
   color: red
@@ -10,3 +11,20 @@
   padding: 5px
   color: darkred
   margin: 10px 0
+
+.formItem
+  display: flex
+  margin-bottom: 10px
+  .formText
+    padding-left: 10px
+    p
+      margin: 0
+
+button
+  background: #645d15
+  color: white
+  padding: 7px 8px
+  border: none
+  cursor: pointer
+  border-radius: 2px
+  margin-top: 10px
