--- a/src/components/Login/Login.module.sass
+++ b/src/components/Login/Login.module.sass
@@ -1,11 +1,12 @@
-.posts_block
-  padding: 10px
-  border-top: 1px solid rgba(0,0,0,.04)
-  margin-top: 50px
+.formBlock
+  h1
+    text-align: center
+    font-size: calc(14px + 1.5vh)
   form
-    textarea
-      width: 90%
-      min-height: 70px
+    margin: 50px auto 0
+    width: 90%
+    input
+      padding: 5px 10px
     button
       background: #645d15
       color: white
@@ -14,5 +15,3 @@
       cursor: pointer
       border-radius: 2px
       margin-top: 10px
-  .posts
-    margin-top: 40px
