--- a/src/components/NavBar/NavBar.module.sass
+++ b/src/components/NavBar/NavBar.module.sass
@@ -1,16 +1,28 @@
 .nav
   grid-area: n
   background: #645d15
-  box-shadow: 0 0 10px silver
   padding: 10px
-
+  text-align: center
+  display: flex
+  justify-content: space-around
+  border-top: 1px solid rgba(0,0,0,.04)
   .item a
     color: white
     text-decoration: none
     display: block
+    font-size: 17px
 
   .item a.activeLink
-    color: red
+    color: black
 
   .item.margin_top
-      margin-top: 30px
+      margin-top: 10px
+
+@media only screen and (min-device-width: 768px)
+  .nav
+    box-shadow: 0 0 10px silver
+    text-align: left
+    display: block
+    border-top: 0px
+    .item
+      margin-top: 15px
