--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.sass
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.sass
@@ -1,4 +1,34 @@
 .description_block
   padding: 10px
-  img
-    width: 150px
+  .imgBox
+    margin-bottom: 20px
+    text-align: center
+    img
+      width: 150px
+  .status
+    text-align: center
+    margin-top: 10px
+    font-size: 20px
+    overflow: hidden
+  .contacts
+    margin-top: 20px
+    div
+      margin: 5px 0
+    button
+      background: #645d15
+      color: white
+      padding: 7px 8px
+      border: none
+      cursor: pointer
+      border-radius: 2px
+      margin-top: 10px
+    .contactItem
+      text-indent: 20px
+      font-size: 14px
+
+@media only screen and (min-device-width: 450px)
+  .description_block
+    .imgBox
+      text-align: left
+    .status
+      text-align: left
