--- a/src/components/common/Preloader/Preloader.module.sass
+++ b/src/components/common/Preloader/Preloader.module.sass
@@ -1,4 +1,11 @@
 .loaderBox
-  width: 100%
+  position: fixed
+  background: rgba(0,0,0, .9)
+  top: 0
+  bottom: 0
+  left: 0
+  right: 0
+  display: flex
   .loader
     width: 100%
+    margin: auto
